Add utilTest to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ zerocash_pour_ppzksnark/tests/test_zerocash_pour_ppzksnark
 zerocash_pour_ppzksnark/profiling/profile_zerocash_pour_gadget
 tests/zerocashTest
 tests/merkleTest
+tests/utilTest
 libzerocash/GenerateParamsForFiles
